# NostalgiaForInfinity

./: .editorconfig  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  ICT_STRATEGY_FIX_GUIDE.md  ICT_STRATEGY_README.md  ICT_TimeBasedLiquidityStrategy.py  ICT_V1.2.0_URGENT_FIX.md  Nostalgia ForInfinityX7.py  NostalgiaForInfinityNext.py  NostalgiaForInfinityNextGen.py  NostalgiaForInfinityX.py  NostalgiaForInfinityX2.py  NostalgiaForInfinityX3.py  NostalgiaForInfinityX4.py  NostalgiaForInfinityX5.py  NostalgiaForInfinityX6.py  NostalgiaForInfinityX7.py  NostalgiaForInfinityXLeverage.py  PRODUCTION_CONFIG.md  README.md  blacklist-binance.json  blacklist-ftx.json  config.production.json  docker-compose.production.yml  docker-compose.tests.yml  docker-compose.yml  generate_new_shorts.py  generate_short_conditions.py  generated_new_short_conditions.txt  generated_short_conditions.txt  hold-trades.json  insert_conditions.py  kraken_config.json  live-account-example.env  manual-testing.env  mkdocs.yml  pyproject.toml  pytest.ini  (+2 more)
.github/: release-drafter.yml
codemods/: HOtoRawCodemod.py  ho_to_raw_codemod.py
configs/: blacklist-binance.json  blacklist-bitget.json  blacklist-bitmart.json  blacklist-bitvavo.json  blacklist-bybit.json  blacklist-ftx.json  blacklist-gateio.json  blacklist-htx.json  blacklist-huobi.json  blacklist-hyperliquid.json  blacklist-kraken.json  blacklist-kucoin-binance.json  blacklist-kucoin.json  blacklist-mexc.json  blacklist-okx.json  exampleconfig-rebuy.json  exampleconfig.json  exampleconfig_secret.json  kucoin-usdt-static.json  pairlist-backtest-static-binance-futures-usdt.json  pairlist-backtest-static-binance-spot-usdt.json  pairlist-backtest-static-bybit-spot-usdt.json  pairlist-backtest-static-gateio-futures-usdt.json  pairlist-backtest-static-gateio-spot-usdt.json  pairlist-backtest-static-kraken-spot-usdt.json  pairlist-backtest-static-kucoin-futures-usdt.json  pairlist-backtest-static-kucoin-spot-usdt.json  (+66 more)
(+621 files in other folders)
